--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,10 @@ buildscript {
     }
 }
 
+plugins {
+    id 'digital.wup.android-maven-publish'   version '3.6.2'
+}
+
 allprojects {
     repositories {
         google()
