--- a/build.gradle
+++ b/build.gradle
@@ -11,9 +11,6 @@ buildscript {
         classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
 
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$versions.kotlin"
-        classpath "org.jetbrains.kotlin:kotlin-serialization:$versions.kotlin"
-
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
@@ -29,7 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url 'https://artifactory.rakuten-it.com/membership-mvn-release/' }
+        //maven { url 'https://artifactory.rakuten-it.com/membership-mvn-release/' }
     }
 }
 
