--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,9 @@ buildscript {
         classpath deps.android_gradle_plugin
         classpath deps.kotlin.plugin
 
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
+        classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.31"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
