--- a/build.gradle
+++ b/build.gradle
@@ -13,9 +13,7 @@ buildscript {
 
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.31"
-
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        classpath "com.android.tools.build.jetifier:jetifier-processor:1.0.0-beta04"
     }
 }
 
