--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    apply from: 'versions.gradle'
+    //apply from: 'versions.gradle'
 
+    ext.kotlin_version = '1.3.31'
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath deps.android_gradle_plugin
-        classpath deps.kotlin.plugin
-
+        classpath 'com.android.tools.build:gradle:3.4.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.31"
         classpath "org.jetbrains.kotlin:kotlin-serialization:1.3.31"
         classpath "com.android.tools.build.jetifier:jetifier-processor:1.0.0-beta04"
@@ -22,6 +21,9 @@ plugins {
     id 'digital.wup.android-maven-publish'   version '3.6.2'
     id "io.gitlab.arturbosch.detekt"         version "1.0.0.M12.4"   apply false
 }
+
+apply from: "$rootDir/dependencies.gradle"
+apply from: file("scm.gradle")
 
 allprojects {
     repositories {
