--- a/kotlinapi/build.gradle
+++ b/kotlinapi/build.gradle
@@ -2,11 +2,11 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion build_versions.target_sdk
+    compileSdkVersion versions.compileSdkVersion
 
     defaultConfig {
-        minSdkVersion build_versions.min_sdk
-        targetSdkVersion build_versions.target_sdk
+        minSdkVersion versions.minSdkVersion
+        targetSdkVersion versions.targetSdkVersion
         versionCode 1
         versionName "1.0"
 
@@ -25,7 +25,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 
     implementation deps.support.app_compat
-    testImplementation deps.junit
+    testImplementation deps.testing.junit
     androidTestImplementation deps.atsl.runner
     androidTestImplementation deps.espresso.core
     implementation deps.kotlin.stdlib
@@ -34,5 +34,6 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.2'
 }
 repositories {
-    mavenCentral()
+    //mavenCentral()
+     maven { url 'https://kotlin.bintray.com/kotlinx' }
 }
