--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -9,20 +9,20 @@ steps:
     publishJUnitResults: false
     tasks: 'assembleDebug'
 
-- task: Gradle@2
-  inputs:
-    workingDirectory: ''
-    gradleWrapperFile: 'gradlew'
-    publishJUnitResults: false
-    tasks: 'assembleRelease'
+#- task: Gradle@2
+#  inputs:
+#    workingDirectory: ''
+#    gradleWrapperFile: 'gradlew'
+#    publishJUnitResults: false
+#    tasks: 'assembleRelease'
 
-- task: CopyFiles@2
-  inputs:
-    contents: '**/*.apk'
-    targetFolder: '$(build.artifactStagingDirectory)'
+#- task: CopyFiles@2
+#  inputs:
+#    contents: '**/*.apk'
+#    targetFolder: '$(build.artifactStagingDirectory)'
 
-- task: PublishBuildArtifacts@1
-  inputs:
-    pathToPublish: '$(build.artifactStagingDirectory)/app/build/outputs/'
-    artifactName: 'apk-files'
-    artifactType: 'container'
+#- task: PublishBuildArtifacts@1
+#  inputs:
+#    pathToPublish: '$(build.artifactStagingDirectory)/app/build/outputs/'
+#    artifactName: 'apk-files'
+#    artifactType: 'container'
